// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse RDMD Callouts allows nested callouts 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "checked": null,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "list item",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Info Callout",
                    },
                  ],
                  "type": "paragraph",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Lorem ipsum dolor  sit amet consectetur adipisicing elit.",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "data": Object {
                "hName": "rdme-callout",
                "hProperties": Object {
                  "icon": "ℹ️",
                  "theme": "info",
                  "title": "Info Callout",
                  "value": "Lorem ipsum dolor  sit amet consectetur adipisicing elit.",
                },
              },
              "type": "rdme-callout",
            },
          ],
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "type": "root",
}
`;

exports[`Parse RDMD Callouts does not require a line break between the title and the body 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Undocumented Behavior",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor  sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "💁",
          "theme": "default",
          "title": "Undocumented Behavior",
          "value": "Lorem ipsum dolor  sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`Parse RDMD Callouts edge cases does not allow trailing spaces after the icon with no title 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Compact headings must be followed by two line breaks before the following block.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "🛑",
          "theme": "error",
          "title": "",
          "value": "Compact headings must be followed by two line breaks before the following block.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`Parse RDMD Callouts edge cases renders html inside a callout 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Info Callout",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "html",
              "value": "<span>",
            },
            Object {
              "type": "text",
              "value": "With html!",
            },
            Object {
              "type": "html",
              "value": "</span>",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "ℹ️",
          "theme": "info",
          "title": "Info Callout",
          "value": "<span>With html!</span>",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`Parse RDMD Callouts parses a callout with no title 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor  sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "ℹ️",
          "theme": "info",
          "title": "",
          "value": "Lorem ipsum dolor  sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`Parse RDMD Callouts renders an info callout 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Info Callout",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor  sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "ℹ️",
          "theme": "info",
          "title": "Info Callout",
          "value": "Lorem ipsum dolor  sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`Parse RDMD Callouts requires a space between the icon and title 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "ℹ️Info Callout",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor  sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "root",
}
`;

exports[`Parse RDMD Callouts supports a default theme 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Themeless",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "🥇",
          "theme": "default",
          "title": "Themeless",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for ‼️ 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "‼️",
          "theme": "error",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for ⁉️ 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "⁉️",
          "theme": "error",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for ℹ️ 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "ℹ️",
          "theme": "info",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for ⚠ 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "⚠",
          "theme": "warn",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for ⚠️ 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "⚠️",
          "theme": "warn",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for ✅ 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "✅",
          "theme": "okay",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for ❗ 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "❗",
          "theme": "error",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for ❗️ 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "❗️",
          "theme": "error",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for 👍 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "👍",
          "theme": "okay",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for 📘 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "📘",
          "theme": "info",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for 🚧 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "🚧",
          "theme": "warn",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;

exports[`emoji modifier support render a callout for 🛑 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
            },
          ],
          "type": "paragraph",
        },
      ],
      "data": Object {
        "hName": "rdme-callout",
        "hProperties": Object {
          "icon": "🛑",
          "theme": "error",
          "title": "",
          "value": "Lorem ipsum dolor sit amet consectetur adipisicing elit.",
        },
      },
      "type": "rdme-callout",
    },
  ],
  "type": "root",
}
`;
